removing z-index on homepage arrow to avoid appearing on menu

--- a/css/home.css
+++ b/css/home.css
@@ -288,7 +288,7 @@ transition: top .5s ease;
 
 .section_viewport {}
 #holder-0 .section_viewport {height:100vh;}
-.arrow {display:block; z-index:9999999999}
+.arrow {display:block;}
 
 
 }
